# FreeSynd

./: .gitignore  README.md
assets/: freesynd.ini  lowercase.ps1
assets/data/: .gitignore
platform/android/: .gitignore  gradle.properties  settings.gradle.kts
platform/android/app/: build.gradle.kts
platform/android/app/src/main/: AndroidManifest.xml
platform/android/app/src/main/assets/: freesynd.ini
platform/android/app/src/main/res/values/: ic_launcher_round_background.xml  strings.xml  themes.xml
platform/android/app/src/main/res/values-night/: themes.xml
platform/android/gradle/: libs.versions.toml
platform/android/gradle/wrapper/: gradle-wrapper.properties
platform/windows/: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  FreeSynd.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
platform/windows/data/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
platform/windows/docs/: Doxyfile.docs  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  docs.vcxproj  docs.vcxproj.filters
platform/windows/engine/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  fs_engine.vcxproj  fs_engine.vcxproj.filters  fs_engine_sdl.vcxproj  fs_engine_sdl.vcxproj.filters  fs_engine_sdlmixer.vcxproj  fs_engine_sdlmixer.vcxproj.filters
platform/windows/engine/Debug/: fs_engine_sdl.lib  fs_engine_sdlmixer.lib
platform/windows/engine/fs_engine.dir/Debug/: fs_engine.lib.recipe
platform/windows/engine/fs_engine.dir/Debug/fs_engine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
platform/windows/engine/fs_engine.dir/Release/fs_engine.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
platform/windows/engine/fs_engine_sdl.dir/Debug/fs_engine_sdl.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
platform/windows/engine/fs_engine_sdl.dir/Release/fs_engine_sdl.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  fs_engine_sdl.lastbuildstate
platform/windows/engine/fs_engine_sdlmixer.dir/Debug/fs_engin.102AEFE7.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
platform/windows/engine/fs_engine_sdlmixer.dir/Release/fs_engin.102AEFE7.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
platform/windows/game/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  freesynd.vcxproj  freesynd.vcxproj.filters
platform/windows/game/freesynd.dir/Debug/: freesynd.exe.recipe
platform/windows/game/freesynd.dir/Debug/freesynd.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  freesynd.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
platform/windows/game/freesynd.dir/Release/: freesynd.exe.recipe
platform/windows/game/freesynd.dir/Release/freesynd.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
platform/windows/kernel/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  fs_kernel.vcxproj  fs_kernel.vcxproj.filters
platform/windows/kernel/fs_kernel.dir/Debug/fs_kernel.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
platform/windows/kernel/fs_kernel.dir/Release/fs_kernel.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
platform/windows/packaging/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
platform/windows/utils/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  fs_utils.vcxproj  fs_utils.vcxproj.filters
platform/windows/utils/fs_utils.dir/Debug/fs_utils.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
platform/windows/utils/fs_utils.dir/Release/fs_utils.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
platform/windows/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
platform/windows/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.write.1.tlog
platform/windows/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.write.1.tlog
platform/windows/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
platform/windows/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog
platform/windows/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.read.1.tlog
source/: CMakeLists.txt
source/engine/: CMakeLists.txt
source/engine/include/fs-engine/menus/: flimenu.h
source/engine/src/: appcontext.cpp  base_app.cpp
source/engine/src/menus/: flimenu.cpp
source/engine/src/sound/: musicmanager.cpp
source/engine/src/sound/mixer/: sdlmixeraudio.cpp
source/engine/src/system/sdl/: system_sdl.cpp  system_sdl.h
source/game/: CMakeLists.txt  android-bridge.cpp  freesynd.cpp  freesynd.cpp.bak
source/game/menus/: gameplaymenu.cpp
source/kernel/include/fs-kernel/model/: damage.h
source/kernel/src/ia/: actions.cpp
source/kernel/src/model/: ped.cpp  pedpathfinding.cpp
source/utils/: CMakeLists.txt
source/utils/include/fs-utils/log/: log.h
source/utils/src/: file.cpp
(+5 files in other folders)
